--- a/libs/database/src/lib/components/data-list/data-list.component.html
+++ b/libs/database/src/lib/components/data-list/data-list.component.html
@@ -1,12 +1,12 @@
 <sio-list
-  [data]="this.store.selectAll()"
+  [data]="this.store!.selectAll()"
   [header]="this.header"
   [label]="this.label"
   [thumbnail]="this.thumbnail"
-  [LeftSwipe]="this.LeftSwipe"
-  [infinite]="this.infinite"
-  (sioCoreListItemLeftSwipe)="this.sioCoreItemLeftSwipe($event)"
-  (sioCoreListItemRightSwipe)="this.sioCoreItemRightSwipe($event)"
-  (sioCoreListInfinite)="this.sioCoreListInfinite($event)"
-  (sioRefreshList)="(this.re)"
+  [enableLeftSwipe]="this.enableLeftSwipe"
+  [enableInfinite]="this.enableInfinite"
+  (leftSwipe)="this.onLeftSwipe($event)"
+  (rightSwipe)="this.onRightSwipe($event)"
+  (infinite)="this.onInfinite($event)"
+  (refresh)="this.onRefresh($event)"
 ></sio-list>
