--- a/libs/core/src/lib/components/list/list.component.html
+++ b/libs/core/src/lib/components/list/list.component.html
@@ -1,4 +1,4 @@
-<ion-refresher slot="fixed" (ionRefresh)="onRefresh($event)">
+<ion-refresher slot="fixed" (ionRefresh)="this.refresh($event)">
   <ion-refresher-content pullingIcon="chevron-down-circle-outline" pullingText="{{ 'LIST_PULL_TEXT' | translate }}"
     refreshingSpinner="circles" refreshingText="{{ 'LIST_PULL_WAITING' | translate }}" >
   </ion-refresher-content>
@@ -7,11 +7,10 @@
   <sio-item *ngFor="let item of this.data; trackItem" [$id]="item['$id']" [header]="item[this.header]"
     [label]="item[this.label]" [thumbnail]="this.thumbnail ? item[this.thumbnail] : undefined"
     [avatar]="this.avatar ? item[this.avatar] : undefined" [icon]="this.icon ? item[this.icon] : undefined"
-    [LeftSwipe]="this.leftSwipe !== null" [RightSwipe]="this.rightSwipe !== null"
-    (sioCoreItemLeftSwipe)="this.onLeftSwipe($event)"
-    (sioCoreItemRightSwipe)="this.onRightSwipe($event)"></sio-item>
+    (sioOnLeftSwipe)="this.leftSwipe($event)"
+    (sioOnRightSwipe)="this.rightSwipe($event)"></sio-item>
 </ion-list>
-<ion-infinite-scroll *ngIf="this.enableInfinite" threshold="20%" (ionInfinite)="this.onInfinite($event)">
+<ion-infinite-scroll *ngIf="this.enableInfinite" threshold="20%" (ionInfinite)="this.infinite($event)">
   <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="{{ 'LIST_LOADING' | translate }}">
   </ion-infinite-scroll-content>
 </ion-infinite-scroll>
