--- a/libs/database/src/lib/components/data-list/data-list.component.html
+++ b/libs/database/src/lib/components/data-list/data-list.component.html
@@ -1,12 +1,22 @@
-<sio-list
-  [data]="this.store!.selectAll()"
-  [header]="this.header"
-  [label]="this.label"
-  [thumbnail]="this.thumbnail"
-  [enableLeftSwipe]="this.enableLeftSwipe"
-  [enableInfinite]="this.enableInfinite"
-  (sioOnLeftSwipe)="this.onLeftSwipe($event)"
-  (sioOnRightSwipe)="this.onRightSwipe($event)"
-  (sioOnInfinite)="this.onInfinite($event)"
-  (sioOnRefresh)="this.onRefresh($event)"
-></sio-list>
+<ion-refresher slot="fixed" *ngIf="this.refresh !== null" (ionRefresh)="this.refresh($event)">
+  <ion-refresher-content pullingIcon="chevron-down-circle-outline" pullingText="{{ 'LIST_PULL_TEXT' | translate }}"
+    refreshingSpinner="circles" refreshingText="{{ 'LIST_PULL_WAITING' | translate }}">
+  </ion-refresher-content>
+</ion-refresher>
+<sio-list [data]="this.store!.selectAll()" [header]="this.header" [label]="this.label" [thumbnail]="this.thumbnail"
+  (sioOnLeftSwipe)="this.leftSwipe($event)" (sioOnRightSwipe)="this.rightSwipe($event)"
+  (sioOnInfinite)="this.infinite($event)" (sioOnRefresh)="this.refresh($event)">
+  <ion-item-option slot="left_options">Favorite</ion-item-option>
+  <ion-item-option slot="left_options" color="danger">Delete</ion-item-option>
+  <div #left_options>
+    <ng-content select="[slot='left_options']"></ng-content>
+  </div>
+  <div #right_options>
+    <ng-content select="[slot='right_options']"></ng-content>
+  </div>
+</sio-list>
+<ion-infinite-scroll *ngIf="this.infinite !== null && this.store?.localTotals !== this.store?.remoteTotals"
+  threshold="20%" (ionInfinite)="this.infinite($event)">
+  <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="{{ 'LIST_LOADING' | translate }}">
+  </ion-infinite-scroll-content>
+</ion-infinite-scroll>
