refactor of slide menu

--- a/apps/demo/src/app/app.component.html
+++ b/apps/demo/src/app/app.component.html
@@ -1,5 +1,4 @@
 <sio-app
-  
   title="Demo"
   leftPanelType="push"
   righPanelType="none"
@@ -7,6 +6,8 @@
   tabDesktopPosition="left"
   tabMobilePosition="bottom"
   color="primary"
+  leftMenuID="right_items"
+  menuID="right_items"
 >
   <sio-auth-badge slot="left_header" size="large"></sio-auth-badge>
   <br slot="left_header" />
