--- a/apps/demo/src/app/database/database.page.html
+++ b/apps/demo/src/app/database/database.page.html
@@ -1,10 +1,11 @@
 <sio-page
   [title]="'Task ('+this.taskState.localTotals+'/'+this.taskState.remoteTotals+') index' + this.taskState.remoteIndex">
   <sio-datalist [store]="this.taskState" header="name" label="description" thumbnail="thumbnail"
-    [enableInfinite]="this.taskState.localTotals < this.taskState.remoteTotals" (sioOnLeftSwipe)="this.archive($event)"
-    (sioOnRightSwipe)="this.delete($event)" (sioOnInfinite)="this.load($event)" (sioOnRefresh)="this.refresh($event)">
-    <ion-item-option slot="right_options">Favorite</ion-item-option>
-    <ion-item-option slot="right_options" color="danger">Delete</ion-item-option>
+    [enableInfinite]="this.taskState.localTotals < this.taskState.remoteTotals"
+    (sioOnInfinite)="this.load($event)" (sioOnRefresh)="this.refresh($event)"
+    rightMenuId="right_items"
+    leftMenuId="right_items"
+  >
   </sio-datalist>
   <ion-fab slot="footer" vertical="bottom" horizontal="end">
     <sio-button (Click)="this.create()" type="fab" icon="add" color="danger"></sio-button>
