--- a/libs/core/src/lib/components/button/button.component.html
+++ b/libs/core/src/lib/components/button/button.component.html
@@ -6,6 +6,7 @@
     [shape]="this.round ? 'round' : undefined"
     [expand]="this.full ? 'full' : this.block ? 'block' : undefined"
     [size]="this.size"
+    [fill]="this.clear?'clear':'solid'"
     (click)="onClick()"
   >
     <ion-icon
