feat: Add id attribute to sio-page element in database, home, settings, and storage pages, fix toolbar and title binding in page component HTML and refactor page component to use id instead of pageId and add missing properties

--- a/apps/demo/src/app/database/database.page.html
+++ b/apps/demo/src/app/database/database.page.html
@@ -1,4 +1,5 @@
 <sio-page
+  id="database"
   [title]="'Task ('+this.taskState.localTotals+'/'+this.taskState.remoteTotals+') index' + this.taskState.remoteIndex">
   <sio-datalist [store]="this.taskState" header="name" label="description" thumbnail="thumbnail"
     [enableInfinite]="this.taskState.localTotals < this.taskState.remoteTotals"
