--- a/apps/demo/src/app/storage/storage.page.html
+++ b/apps/demo/src/app/storage/storage.page.html
@@ -1,4 +1,4 @@
-<sio-page title="Storage Apprite Plugin Test Page">
+<sio-page title="Storage Apprite Plugin Test Page" id="storage">
   <sio-button upload (Click)="this.upload($event)">LOAD</sio-button>
   <sio-button color="danger" (Click)="this.delete('all')" [disabled]="!this.sioStorageState.totals">DELETE
     ALL</sio-button>
