feat: Remove unnecessary exclamation mark in ion-toolbar color attribute, update migrations.json to version 17.3.0 with new descriptions and packages and update package.json to latest versions for Angular, Maskito, Appwrite, Angular Devkit, Angular ESLint, Angular CLI, NX, Cypress, Jest, JS, Storybook, Web, Workspace, Schematics, Storybook addons, SWC, TypeScript, ESLint, ng-packagr, and PostCSS

--- a/libs/core/src/lib/components/page/page.component.html
+++ b/libs/core/src/lib/components/page/page.component.html
@@ -4,7 +4,7 @@
   [translucent]="true"
   class="ion-no-border"
 >
-  <ion-toolbar [color]="this.sioCorePagesComponentState.entities![this.id!]?.color!">
+  <ion-toolbar [color]="this.sioCorePagesComponentState.entities![this.id!]?.color">
     <ion-buttons slot="start">
       <ng-container>
         <ion-menu-button menu="start"></ion-menu-button>
