--- a/libs/core/src/lib/components/page/page.component.html
+++ b/libs/core/src/lib/components/page/page.component.html
@@ -4,14 +4,19 @@
   [translucent]="true"
   class="ion-no-border"
 >
-  <ion-toolbar [color]="this.sioCorePagesComponentState.entities[this.id!].color!">
+  <ion-toolbar
+    [color]="this.sioCorePagesComponentState.entities[this.id!].color!"
+  >
     <ion-buttons slot="start">
       <ng-container>
         <ion-menu-button menu="start"></ion-menu-button>
         <ion-back-button *ngIf="this.back"></ion-back-button>
       </ng-container>
     </ion-buttons>
-    <ion-title>{{ this.sioCorePagesComponentState.entities[this.id!].title! | translate }}</ion-title>
+    <ion-title
+      >{{ this.sioCorePagesComponentState.entities[this.id!].title! | translate
+      }}</ion-title
+    >
     <ion-buttons slot="end">
       <ng-content select="[slot='end']"> </ng-content>
     </ion-buttons>
@@ -26,9 +31,15 @@
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true" class="ion-padding">
-  <ion-header *ngIf="this.sioCorePagesComponentState.entities![this.id!]?.toolbar!" collapse="condense">
+  <ion-header
+    *ngIf="this.sioCorePagesComponentState.entities![this.id!]?.toolbar!"
+    collapse="condense"
+  >
     <ion-toolbar>
-      <ion-title size="large">{{ this.sioCorePagesComponentState.entities[this.id!].title! | translate }}</ion-title>
+      <ion-title size="large"
+        >{{ this.sioCorePagesComponentState.entities[this.id!].title! |
+        translate }}</ion-title
+      >
     </ion-toolbar>
   </ion-header>
   <div #content>
@@ -36,7 +47,10 @@
   </div>
   <ng-container *ngIf="!content.hasChildNodes()">
     <div id="container">
-      <h1>{{ 'PAGE_COMPONENT_DEFAULT_1' | translate }} {{ this.sioCorePagesComponentState.entities[this.id!].title! | translate }}</h1>
+      <h1>
+        {{ 'PAGE_COMPONENT_DEFAULT_1' | translate }} {{
+        this.sioCorePagesComponentState.entities[this.id!].title! | translate }}
+      </h1>
       <strong>{{ 'PAGE_COMPONENT_DEFAULT_2' | translate }}</strong>
       <p>
         {{ 'PAGE_COMPONENT_LINK' | translate }}
@@ -53,15 +67,20 @@
 
 <ion-footer>
   <div #footer>
-  <ng-content select="[slot='footer']"></ng-content>
+    <ng-content select="[slot='footer']"></ng-content>
   </div>
   <ng-container *ngIf="!footer.hasChildNodes()">
     <ion-fab slot="footer" vertical="bottom" horizontal="end">
       <sio-button type="fab" icon="add"></sio-button>
       <ion-fab-list side="top">
-        <sio-button type="fab" icon="logo-euro" size="small" upload ></sio-button>
+        <sio-button
+          type="fab"
+          icon="logo-euro"
+          size="small"
+          upload
+        ></sio-button>
         <!--// <sio-button type="fab" icon="notifications" size="small"></sio-button> //-->
-        <sio-button type="fab" icon="car" size="small" upload ></sio-button>
+        <sio-button type="fab" icon="car" size="small" upload></sio-button>
       </ion-fab-list>
     </ion-fab>
   </ng-container>
