feat: Fixed password input type in login state, added password toggle functionality in input component, fixed syntax error in input component template, added 'password-withtoogle' option in input component, updated Angular and Ionic versions and updated NX dependencies

--- a/libs/core/src/lib/components/input/input.component.html
+++ b/libs/core/src/lib/components/input/input.component.html
@@ -1,9 +1,7 @@
 <div *ngIf="this._type === 'file'; then file; else default"></div>
 <ng-template #file>
   <ion-item>
-    <ion-label>
-      {{ this.label | translate }}
-    </ion-label>
+    <ion-label> {{ this.label | translate }} </ion-label>
     <ion-button (click)="pickFile()" slot="end">UPLOAD</ion-button>
   </ion-item>
 </ng-template>
@@ -22,9 +20,13 @@
     [name]="this.name"
     [debounce]="this.debounce"
     [disabled]="this.disabled"
-    [type]="this._type"
+    [type]="(this._type === 'password-withtoogle')?'password':this._type"
     errorText="{{ this.name.toUpperCase() + '-ERROR-TEXT' | translate }}"
     helperText="{{ this.name.toUpperCase() + '-HELPER-TEXT' | translate }}"
     [class]="this.invalid && this.dirty ? 'ng-invalid ng-touched' : ''"
-  ></ion-input
-></ng-template>
+  >
+    @if (this._type === 'password-withtoogle') {
+    <ion-input-password-toggle slot="end"></ion-input-password-toggle>
+    }
+  </ion-input></ng-template
+>
