--- a/libs/chat/src/lib/components/chat/chat.component.html
+++ b/libs/chat/src/lib/components/chat/chat.component.html
@@ -1,33 +1,19 @@
-<ion-refresher
-  slot="fixed"
-  *ngIf="this.refresh !== null"
-  (ionRefresh)="this.refresh($event)"
->
-  <ion-refresher-content
-    pullingIcon="chevron-down-circle-outline"
-    pullingText="{{ 'CHAT_PULL_TEXT' | translate }}"
-    refreshingSpinner="circles"
-    refreshingText="{{ 'LIST_PULL_WAITING' | translate }}"
-  >
+<ion-refresher slot="fixed" *ngIf="this.refresh !== null" (ionRefresh)="this.refresh($event)">
+  <ion-refresher-content pullingIcon="chevron-down-circle-outline" pullingText="{{ 'CHAT_PULL_TEXT' | translate }}"
+    refreshingSpinner="circles" refreshingText="{{ 'LIST_PULL_WAITING' | translate }}">
   </ion-refresher-content>
 </ion-refresher>
-<sio-chat-message
-  (sioOnInfinite)="(null)"
-  (sioOnRefresh)="(null)"
-  [user]="'io'"
-></sio-chat-message>
-
-<ion-infinite-scroll
-  *ngIf="
+<ion-list>
+  <sio-chat-message *ngFor="
+    let item of this.sioChatState.selectAll()[0]?.messages;
+    " [message]="item.content" (sioOnInfinite)="(null)" (sioOnRefresh)="(null)" [user]="item.from.nick"
+    [date]="item.$createdAt?item.$createdAt:''"
+    [state]="item.state" [received]="item.from.nick !== 'Fr4'"></sio-chat-message>
+</ion-list>
+<ion-infinite-scroll *ngIf="
     this.infinite !== null &&
     this.sioChatState.localTotals !== this.sioChatState.remoteTotals
-  "
-  threshold="20%"
-  (ionInfinite)="(null)"
->
-  <ion-infinite-scroll-content
-    loadingSpinner="bubbles"
-    loadingText="{{ 'CHAT_LOADING' | translate }}"
-  >
+  " threshold="20%" (ionInfinite)="(null)">
+  <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="{{ 'CHAT_LOADING' | translate }}">
   </ion-infinite-scroll-content>
 </ion-infinite-scroll>
