--- a/libs/chat/src/lib/components/message/message.component.html
+++ b/libs/chat/src/lib/components/message/message.component.html
@@ -1,14 +1,14 @@
-<div class="message" [class.left]="this.received" [class.right]="!this.received">
-  <img class="user-img" [src]="this.avatar" alt="" src="" />
-  <ion-spinner name="dots" *ngIf="this.state === 'pending'"></ion-spinner>
-  <div class="msg-detail">
-    <div class="msg-info">
-      <p>
-        {{this.user}}&nbsp;&nbsp;&nbsp;{{ this.date }}</p>
+<ion-item class="message" [class.left]="this.received" [class.right]="!this.received">
+  <ion-avatar class="avatar-top" aria-hidden="true" [slot]="this.received?'start':'end'">
+    <img [src]="this.avatar" />
+  </ion-avatar>
+  <ion-label>
+    <div class="msg-detail">
+      <div class="msg-content">
+        <span class="triangle"></span>
+        <p>{{this.user}} - {{ this.date }}</p>
+        <p class="line-breaker ">{{this.message}}</p>
+      </div>
     </div>
-    <div class="msg-content">
-      <span class="triangle"></span>
-      <p class="line-breaker ">{{this.message}}</p>
-    </div>
-  </div>
-</div>
+  </ion-label>
+</ion-item>
