--- a/libs/database/src/lib/components/data-list/data-list.component.html
+++ b/libs/database/src/lib/components/data-list/data-list.component.html
@@ -5,7 +5,7 @@
 </ion-refresher>
 <sio-list [data]="this.store!.selectAll()" [header]="this.header" [label]="this.label" [thumbnail]="this.thumbnail"
   (sioOnLeftSwipe)="this.leftSwipe($event)" (sioOnRightSwipe)="this.rightSwipe($event)"
-  (sioOnInfinite)="this.infinite($event)" (sioOnRefresh)="this.refresh($event)"
+  (sioOnInfinite)="this.infinite($event)" (sioOnRefresh)="this.refresh($event)" (sioOnClick)="this.click($event)"
   [leftMenuId]="this.leftMenuId"
   [rightMenuId]="this.rightMenuId">
 </sio-list>
