--- a/libs/core/src/lib/components/list/list.component.html
+++ b/libs/core/src/lib/components/list/list.component.html
@@ -9,7 +9,7 @@
     [icon]="this.icon ? item[this.icon] : undefined"
     [rightMenuId]="this.rightMenuId"
     [leftMenuId]="this.leftMenuId"
-    (OnClick) = "this.click($event)"
+    (sioOnClick) = "this.click($event)"
   >
   </sio-item>
 </ion-list>
