--- a/libs/core/src/lib/components/page/page.component.html
+++ b/libs/core/src/lib/components/page/page.component.html
@@ -1,29 +1,18 @@
-<ion-header
-  *ngIf="this.sioCorePagesComponentState.entities![this.id!]?.toolbar && !this.fullmode"
-  collapse="fade"
-  [translucent]="true"
-  class="ion-no-border"
->
-  <ion-toolbar
-    [color]="this.sioCorePagesComponentState.entities[this.id!].color!"
-  >
+<ion-header *ngIf="this.sioCorePagesComponentState.entities![this.id!]?.toolbar && !this.fullmode" collapse="fade"
+  [translucent]="true" class="ion-no-border">
+  <ion-toolbar [color]="this.sioCorePagesComponentState.entities[this.id!].color!">
     <ion-buttons slot="start">
       <ng-container>
-        <ion-menu-button menu="start"></ion-menu-button>
-        <ion-back-button *ngIf="this.back"></ion-back-button>
+        <ion-menu-button *ngIf="!this.back" menu="start"></ion-menu-button>
+        <ion-back-button *ngIf="this.back" default-href="#"></ion-back-button>
       </ng-container>
     </ion-buttons>
-    <ion-title
-      >{{ this.sioCorePagesComponentState.entities[this.id!].title! | translate
-      }}</ion-title
-    >
+    <ion-title>{{ this.sioCorePagesComponentState.entities[this.id!].title! | translate
+      }}</ion-title>
     <ion-buttons slot="end">
       <ng-content select="[slot='end']"> </ng-content>
     </ion-buttons>
-    <ion-buttons
-      *ngIf="!this.sioCoreAppComponentState.snapshot.layout!.split"
-      slot="end"
-    >
+    <ion-buttons *ngIf="!this.sioCoreAppComponentState.snapshot.layout!.split" slot="end">
       <ng-content select="[slot='mobile']"></ng-content>
 
       <ion-menu-button menu="end"></ion-menu-button>
@@ -31,15 +20,10 @@
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true" class="ion-padding">
-  <ion-header
-    *ngIf="this.sioCorePagesComponentState.entities![this.id!]?.toolbar!"
-    collapse="condense"
-  >
+  <ion-header *ngIf="this.sioCorePagesComponentState.entities![this.id!]?.toolbar!" collapse="condense">
     <ion-toolbar>
-      <ion-title size="large"
-        >{{ this.sioCorePagesComponentState.entities[this.id!].title! |
-        translate }}</ion-title
-      >
+      <ion-title size="large">{{ this.sioCorePagesComponentState.entities[this.id!].title! |
+        translate }}</ion-title>
     </ion-toolbar>
   </ion-header>
   <div #content>
@@ -54,12 +38,8 @@
       <strong>{{ 'PAGE_COMPONENT_DEFAULT_2' | translate }}</strong>
       <p>
         {{ 'PAGE_COMPONENT_LINK' | translate }}
-        <a
-          target="_blank"
-          rel="noopener noreferrer"
-          href="https://silicia-apps.gitbook.io/sio-framework/"
-          >SIO Framework</a
-        >
+        <a target="_blank" rel="noopener noreferrer" href="https://silicia-apps.gitbook.io/sio-framework/">SIO
+          Framework</a>
       </p>
     </div>
   </ng-container>
@@ -73,12 +53,7 @@
     <ion-fab slot="footer" vertical="bottom" horizontal="end">
       <sio-button type="fab" icon="add"></sio-button>
       <ion-fab-list side="top">
-        <sio-button
-          type="fab"
-          icon="logo-euro"
-          size="small"
-          upload
-        ></sio-button>
+        <sio-button type="fab" icon="logo-euro" size="small" upload></sio-button>
         <!--// <sio-button type="fab" icon="notifications" size="small"></sio-button> //-->
         <sio-button type="fab" icon="car" size="small" upload></sio-button>
       </ion-fab-list>
